On clicking the search button for pokemon, loading spinner appears before the correct pokemon data shows on the screen for the pokemon name the user typed

--- a/src/App.css
+++ b/src/App.css
@@ -71,3 +71,13 @@ section li {
 label {
   display: block;
 }
+
+.poke-item {
+  border: 2px solid black;
+  border-radius: 10px;
+}
+
+.poke-item img{
+  width: 100px;
+  height: 100px;
+}
