on click of yelp search button, fetch correct searched data using YELP API key, and render on the screen

--- a/src/App.css
+++ b/src/App.css
@@ -72,12 +72,17 @@ label {
   display: block;
 }
 
-.poke-item {
+.poke-item, .yelp-item {
   border: 2px solid black;
   border-radius: 10px;
 }
 
-.poke-item img{
+.poke-item img {
   width: 100px;
   height: 100px;
+}
+.yelp-item img {
+  width: 150px;
+  height: 130px;
+  border-radius: 10px;
 }
